<resources>
    <string name="app_name">RMSPHONE</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ticketBtn">My Ticket</string>
    <string name="backBtn">Back</string>
    <string name="confirmBtn">Confirm</string>
    <string name="refreshBtn">Refresh</string>
    <string name="restaurantBtn">Restaurants</string>
    <string name="cancelBtn">Cancel this ticket</string>
    <string name="submitBtn">submit</string>
    <string name="restaurantName">Restaurant Name :</string>
    <string name="restaurantInfo">Restaurant Info :</string>
    <string name="searching_Label">Search Keyword:</string>
    <string name="filter_Label">District: </string>
    <string name="party_size">Party Size :</string>
    <string name="numberOfTickets">Number of Tickets ahead:</string>
    <string name="waitingTime">Waiting time:</string>
    <string name="title_activity_choose_restaurant">Choose Restaurant</string>
    <string name="title_activity_choose_size">Choose Party Size</string>
    <string name="title_activity_confirm_ticket">Confirm Ticket</string>
    <string name="title_activity_view_ticket">View Ticket</string>
</resources>
