<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="spring.learning.rmsphone.ChooseRestaurant">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticketBtn"
        android:id="@+id/ticketBtn"
        android:layout_marginRight="26dp"
        android:layout_marginEnd="26dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchingField"
        android:layout_marginTop="34dp"
        android:text="Seraching"
        android:layout_below="@+id/ticketBtn"
        android:layout_toRightOf="@+id/searchLabel"
        android:layout_toEndOf="@+id/searchLabel"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searching_Label"
        android:id="@+id/searchLabel"
        android:layout_alignBaseline="@+id/searchingField"
        android:layout_alignBottom="@+id/searchingField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/districtDropdown"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/searchingField"
        android:layout_toEndOf="@+id/searchingField" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/restaurantList"
        android:layout_below="@+id/districtDropdown"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:choiceMode="singleChoice" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitBtn"
        android:id="@+id/submit"
        android:layout_alignBottom="@+id/searchingField"
        android:layout_alignLeft="@+id/ticketBtn"
        android:layout_alignStart="@+id/ticketBtn"
        android:layout_alignTop="@+id/searchingField"
        android:layout_alignRight="@+id/ticketBtn"
        android:layout_alignEnd="@+id/ticketBtn" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/areaDropdown"
        android:layout_above="@+id/restaurantList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown"
        android:layout_toStartOf="@+id/districtDropdown"
        android:layout_toLeftOf="@+id/districtDropdown" />
</RelativeLayout>
